# FDS_PROJECT

./: pyproject.toml  sweep.yaml
cfg/: base.yaml
cfg/block/: conv.yaml
cfg/embed/: conv.yaml
cfg/optimizer/: adam.yaml
cfg/rnn_block/: lstm.yaml
cfg/unembed/: mlp.yaml
src/: experiment.py
src/dataset/: datasets.py  loaders.py
src/net/: attention.py  base.py  cnn.py  lstm.py  mlp.py  rnn.py  tcn.py
